# DjangoRecipeFinderProject

./: db.sqlite3  pyproject.toml
mysite/: settings.py  urls.py  views.py
recipes/: API.py  admin.py
templates/: base.html
templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
